samples/_failures_safe/1761393897_a2478e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c79275bd.c: In function ‘main’:
./samples/SAFE/__tmp_c79275bd.c:166:5: error: expected expression at end of input
  166 |     print_tokens(tokens,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_c79275bd.c:166:5: error: expected declaration or statement at end of input
